category management, ads assigned to categories
